[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes-Martin/Cleasing light semi.gd" type="Script" id=1]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.502415, 1 )
colors = PoolColorArray( 1, 0.552941, 0.0666667, 1, 1, 0.85098, 0, 1, 1, 0.592157, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 3, 1, 5 )
direction = Vector3( 0, 5, 0 )
spread = 80.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
angular_velocity = 100.0
radial_accel = -5.0
tangential_accel = 1.0
angle = 5.0
angle_random = 1.0
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 5 )
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.894118, 0.917647, 0.121569, 1 )

[sub_resource type="QuadMesh" id=3]
material = SubResource( 2 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
direction = Vector3( 0, 5, 0 )
spread = 80.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
angular_velocity = 100.0
radial_accel = -80.0
radial_accel_random = 1.0
tangential_accel = 7.0
angle = 5.0
angle_random = 1.0
scale = 4.0
scale_random = 1.0
color_ramp = SubResource( 5 )
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="QuadMesh" id=8]
material = SubResource( 2 )
size = Vector2( 0.01, 0.01 )

[node name="Cleasing light semi" type="Spatial"]
script = ExtResource( 1 )

[node name="OmniLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 4.84484, 0 )
light_color = Color( 0.905882, 0.909804, 0.247059, 1 )
light_energy = 30.0
spot_range = 10.0

[node name="OmniLight3" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -1.24727, 4.83569, -2.87613 )
light_color = Color( 0.905882, 0.909804, 0.247059, 1 )
light_energy = 30.0
spot_range = 10.0

[node name="OmniLight2" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -1.2738, 4.84484, 2.49866 )
light_color = Color( 0.905882, 0.909804, 0.247059, 1 )
light_energy = 30.0
spot_range = 10.0

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.788032, 1.64629, -0.232159 )
amount = 80
lifetime = 2.0
visibility_aabb = AABB( -4, -1.15806, -4, 8, 2.31611, 8 )
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 3 )

[node name="Particles2" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.788032, 1.64629, -0.232159 )
amount = 200
lifetime = 2.0
visibility_aabb = AABB( -4, -1.15806, -4, 8, 2.31611, 8 )
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )
